fixed alignment on homepage and added picture

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,5 +1,14 @@
 .title {
     text-align: center;
-    position: absolute;
-    left: 27%;
+    margin: 0 auto;
+}
+
+.titleBody {
+    margin: 0 auto;
+    width: 100%;
+}
+
+.logButton {
+    color: white;
+    font-size: 40px;
 }
